# lab-scpi

./: CMakeLists.txt  Makefile  README.md  device.hpp  executor.cpp  fancy_cin.cpp  formattor.cpp  main.cpp  profile.cpp  scpi.cpp  scpi.hpp  yaml.cpp
include/: executor.hpp  fancy_cin.hpp  formattor.hpp  profile.hpp  scpi.hpp  yaml.hpp
